Fix loader image overflowing frame

--- a/webextension/assets/player.css
+++ b/webextension/assets/player.css
@@ -27,6 +27,7 @@ body {
 
   font-weight: bold;
   text-align: center;
+  background-size: cover;
 }
 
 canvas {
